--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ rust:
   - stable
   - beta
   - nightly
+env:
+  global:
+    - RUST_BACKTRACE=1
+    - RUST_LOG=catfs=debug,fuse=debug,integration_tests=debug
 sudo: required
 before_install:
   - sudo apt-get -qq update
