run the suspect test by itself

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ cache: cargo
 before_cache:
   - rm -Rf target/test/
 script:
-  - cargo test || if [ -e core* ]; then gdb --batch --ex "thread apply all bt" $(file core* | cut -d\' -f 2) core*; fi
+  - (cargo test large_dir && cargo test) || if [ -e core* ]; then gdb --batch --ex "thread apply all bt" $(file core* | cut -d\' -f 2) core*; fi
