--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,20 @@ categories = ["caching", "filesystem"]
 
 [dependencies]
 backtrace = "0.3"
-fuse = "0.3.0"
-log = "0.3"
-env_logger = "0.4"
-clap = "2.25.0"
-time = "0.1"
-libc = "0.2"
 chan-signal = "0.2"
-xattr = "0.2"
-threadpool = "1.4"
+clap = "2.25.0"
+env_logger = "0.4"
+fuse = "0.3.0"
+generic-array = "0.8"
 itertools = "0.6"
+log = "0.3"
+libc = "0.2"
 rand = "0.3"
+sha2 = "0.6"
+threadpool = "1.4"
+time = "0.1"
 twox-hash = "1.1"
+xattr = "0.2"
 
 [lib]
 test = false
