--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ka-Hing Cheung <khc@hxbc.us>"]
 description = "Cache AnyThing filesystem"
 keywords = ["filesystem", "fuse", "cache"]
 categories = ["caching", "filesystem"]
+license = "Apache-2.0"
 
 [dependencies]
 backtrace = "0.3"
