daemonize by default and log to syslog

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 backtrace = "0.3"
 chan-signal = "0.2"
 clap = "2.29.0"
+daemonize = "0.2"
 env_logger = "0.4"
 fuse = "0.3.0"
 generic-array = "0.8"
@@ -21,6 +22,7 @@ log = "0.3"
 libc = "0.2"
 rand = "0.3"
 sha2 = "0.6"
+syslog = "3.3"
 threadpool = "1.4"
 time = "0.1"
 twox-hash = "1.1"
