--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "catfs"
-version = "0.9.0"
-authors = ["Ka-Hing Cheung <khc@hxbc.us>"]
+version = "0.9.1"
+authors = ["Ka-Hing Cheung <khc@hxbc.us>", "Joshua Pedrick <joshua.pedrick@gmail.com>"]
 description = "Cache AnyThing filesystem"
 keywords = ["filesystem", "fuse", "cache"]
 categories = ["caching", "filesystem"]
